<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androidfororman</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert">插入</string>
    <string name="delete">删除</string>
    <string name="update">更新</string>
    <string name="select">查询</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>

</resources>
