<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidfororman.MainActivity" >
    <LinearLayout 
        android:id="@+id/txt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
         <TextView 
         android:text="@string/username"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"/>
      	<EditText 
      	    android:id="@+id/username"
      	    android:layout_width="match_parent"
      	    android:layout_height="fill_parent"/>  
        </LinearLayout>
        
         <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
         <TextView 
         android:text="@string/password"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"/>
      	<EditText 
      	    android:id="@+id/password"
      	    android:layout_width="match_parent"
      	    android:layout_height="fill_parent"/>  
        </LinearLayout>
    	
          <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
         <TextView 
         android:text="@string/email"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"/>
      	<EditText 
      	    android:id="@+id/email"
      	    android:layout_width="match_parent"
      	    android:layout_height="fill_parent"/>  
        </LinearLayout>
    </LinearLayout>
	<LinearLayout 
	    android:layout_below="@id/txt"
	    android:id="@+id/ly1"
	    android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:orientation="horizontal">
	   <Button 
       android:id="@+id/btninsert"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/insert"
       android:layout_marginLeft="6dp"
       
       />
	   <Button 
	       android:id="@+id/btnselect"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/select"
	        android:layout_marginLeft="6dp"/>
	   <Button 
	       android:id="@+id/btndelete"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/delete"
	        android:layout_marginLeft="6dp"/>
	   <Button 
	       android:id="@+id/btnupdate"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/update"
	        android:layout_marginLeft="6dp"/>"
	    
	</LinearLayout>
  
  <ListView
      android:id="@+id/list"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/ly1"/>
  <!-- listview用于测试来自于sugar orm解析的数据库数据时时时 -->"

</RelativeLayout>
